--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Cube_URP.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Cube_URP.data.br",
-        frameworkUrl: buildUrl + "/Cube_URP.framework.js.br",
-        codeUrl: buildUrl + "/Cube_URP.wasm.br",
+        dataUrl: buildUrl + "/Cube_URP.data",
+        frameworkUrl: buildUrl + "/Cube_URP.framework.js",
+        codeUrl: buildUrl + "/Cube_URP.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGL_URP",
